--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
 <span style="margin: 40px;padding: 20px">
-    <app-favorite></app-favorite>
+    <app-favorite [is-selected]="true" (change)="favClick()"></app-favorite>
 </span>
